# Jafar

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  DAEMONIZING.md  GEMINI.md  README.md  add_account.py  config.yaml.example  pyproject.toml  run.sh  test_email.py
.github/workflows/: pylint.yml
src/: __init__.py  analyzer.py  checkpoint.py  config.py  diagnostics.py  fact_checker.py  history.py  main.py  news.py  reporter.py  scraper.py  temporal_analyzer.py  tools.py
src/llm/: __init__.py  base.py  factory.py  google_client.py  openai_client.py
src/memory/: __init__.py  base.py  chroma_store.py  embeddings.py  memory_manager.py  pgvector_store.py
systemd/: jafar-evening.timer  jafar-morning.timer  jafar.service  jafar.timer
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/unit/: test_analyzer.py  test_checkpoint.py  test_config.py  test_diagnostics.py  test_fact_checker.py  test_history.py  test_main.py  test_news.py  test_reporter.py  test_temporal_analyzer.py  test_tools.py
tests/unit/llm/: test_openai_client.py
