[project]
name = "twitter-sentiment-analysis"
version = "1.0.0"
description = "Dynamic discovery of economic sentiment on Twitter/X with LLM-powered analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twscrape",
    "spacy",
    "openai",
    "google-genai",
    "python-dotenv",
    "pyyaml",
    "aiohttp",
    "chromadb",
    "socksio",
    "asyncpg",
    "yfinance",
]

[project.optional-dependencies]
# For production pgvector support
postgres = ["asyncpg"]
# For local embeddings (free, no API needed)
local-embeddings = ["sentence-transformers"]
