[project]
name = "jafar"
version = "1.0.0"
description = "The villain to BlackRock's Aladdin. Twitter/X market sentiment analysis for people who can't afford $25k/month."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twscrape",
    "spacy",
    "openai",
    "google-genai",
    "python-dotenv",
    "pyyaml",
    "aiohttp",
    "chromadb",
    "socksio",
    "asyncpg",
    "yfinance",
]

[project.optional-dependencies]
# For production pgvector support
postgres = ["asyncpg"]
# For local embeddings (free, no API needed)
local-embeddings = ["sentence-transformers"]
