[project]
name = "jafar"
version = "1.1.0"
description = "The villain to BlackRock's Aladdin. Twitter/X market sentiment analysis for people who can't afford $25k/month."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twscrape",
    "spacy",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "openai",
    "google-genai",
    "python-dotenv",
    "pyyaml",
    "aiohttp",
    "chromadb",
    "socksio",
    "asyncpg",
    "yfinance",
    "ddgs",
]

[project.optional-dependencies]
# For production pgvector support
postgres = ["asyncpg"]
# For local embeddings (free, no API needed)
local-embeddings = ["sentence-transformers"]

[dependency-groups]
dev = [
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pytest-timeout",
    "freezegun",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
timeout = 60

[tool.coverage.run]
source = ["src"]
